--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -13,7 +13,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rlBookReadRoot"
     android:layout_width="match_parent"
@@ -27,7 +28,7 @@
         android:layout_height="match_parent"
         android:clickable="false"
         android:focusable="false"
-        android:layerType="hardware" />
+        android:layerType="hardware"/>
 
     <LinearLayout
         android:id="@+id/llBookReadTop"
@@ -50,7 +51,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="15dp"
             android:paddingTop="5dp"
-            android:src="@drawable/ab_back" />
+            android:src="@drawable/ab_back"/>
 
         <TextView
             android:id="@+id/tvBookReadTocTitle"
@@ -60,12 +61,12 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:visibility="gone"
-            tools:text="武侠世界自由行" />
+            tools:text="武侠世界自由行"/>
 
-        <TextView
+        <android.support.v4.widget.Space
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5" />
+            android:layout_weight="1.5"/>
 
         <TextView
             android:id="@+id/tvBookReadReading"
@@ -75,7 +76,7 @@
             android:gravity="center"
             android:text="@string/book_read_reading"
             android:textColor="@color/book_read_top_text"
-            android:textSize="@dimen/book_read_top_text" />
+            android:textSize="@dimen/book_read_top_text"/>
 
         <TextView
             android:id="@+id/tvBookReadCommunity"
@@ -85,7 +86,7 @@
             android:gravity="center"
             android:text="@string/book_read_community"
             android:textColor="@color/book_read_top_text"
-            android:textSize="@dimen/book_read_top_text" />
+            android:textSize="@dimen/book_read_top_text"/>
 
         <TextView
             android:id="@+id/tvBookReadIntroduce"
@@ -95,7 +96,7 @@
             android:gravity="center"
             android:text="@string/book_read_introduce"
             android:textColor="@color/book_read_top_text"
-            android:textSize="@dimen/book_read_top_text" />
+            android:textSize="@dimen/book_read_top_text"/>
 
         <TextView
             android:id="@+id/tvBookReadSource"
@@ -105,7 +106,7 @@
             android:gravity="center"
             android:text="@string/book_read_change_source"
             android:textColor="@color/book_read_top_text"
-            android:textSize="@dimen/book_read_top_text" />
+            android:textSize="@dimen/book_read_top_text"/>
 
     </LinearLayout>
 
@@ -121,11 +122,11 @@
         android:singleLine="true"
         android:text="@string/book_read_download_progress"
         android:textColor="@color/white"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
-    <include layout="@layout/layout_read_aa_set" />
+    <include layout="@layout/layout_read_aa_set"/>
 
-    <include layout="@layout/layout_read_mark" />
+    <include layout="@layout/layout_read_mark"/>
 
     <LinearLayout
         android:id="@+id/llBookReadBottom"
@@ -148,7 +149,7 @@
             android:gravity="center"
             android:text="@string/book_read_mode_day"
             android:textColor="@color/book_read_bottom_text"
-            android:textSize="@dimen/book_read_bottom_text" />
+            android:textSize="@dimen/book_read_bottom_text"/>
 
         <TextView
             android:id="@+id/tvBookReadSettings"
@@ -159,7 +160,7 @@
             android:gravity="center"
             android:text="@string/book_read_settings"
             android:textColor="@color/book_read_bottom_text"
-            android:textSize="@dimen/book_read_bottom_text" />
+            android:textSize="@dimen/book_read_bottom_text"/>
 
         <TextView
             android:id="@+id/tvBookReadDownload"
@@ -170,7 +171,7 @@
             android:gravity="center"
             android:text="@string/book_read_download"
             android:textColor="@color/book_read_bottom_text"
-            android:textSize="@dimen/book_read_bottom_text" />
+            android:textSize="@dimen/book_read_bottom_text"/>
 
         <TextView
             android:id="@+id/tvBookMark"
@@ -181,7 +182,7 @@
             android:gravity="center"
             android:text="@string/book_read_mark"
             android:textColor="@color/book_read_bottom_text"
-            android:textSize="@dimen/book_read_bottom_text" />
+            android:textSize="@dimen/book_read_bottom_text"/>
 
         <TextView
             android:id="@+id/tvBookReadToc"
@@ -192,7 +193,7 @@
             android:gravity="center"
             android:text="@string/book_read_toc"
             android:textColor="@color/book_read_bottom_text"
-            android:textSize="@dimen/book_read_bottom_text" />
+            android:textSize="@dimen/book_read_bottom_text"/>
 
     </LinearLayout>
 
